nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-np
  labels:
    app: wordpress-np
spec:
  selector:
    app: wordpress
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
